--- a/week_2/02e_eda_visualisation_patterns.ipynb
+++ b/week_2/02e_eda_visualisation_patterns.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_12.html\"\n",
+       "    src=\"iframe_figures/figure_5.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_14.html\"\n",
+       "    src=\"iframe_figures/figure_7.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_20.html\"\n",
+       "    src=\"iframe_figures/figure_9.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_21.html\"\n",
+       "    src=\"iframe_figures/figure_10.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_24.html\"\n",
+       "    src=\"iframe_figures/figure_13.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_25.html\"\n",
+       "    src=\"iframe_figures/figure_14.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1030,7 +1030,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_25.html\"\n",
+       "    src=\"iframe_figures/figure_14.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_42.html\"\n",
+       "    src=\"iframe_figures/figure_16.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_43.html\"\n",
+       "    src=\"iframe_figures/figure_17.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_44.html\"\n",
+       "    src=\"iframe_figures/figure_18.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_28.html\"\n",
+       "    src=\"iframe_figures/figure_19.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_29.html\"\n",
+       "    src=\"iframe_figures/figure_20.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_36.html\"\n",
+       "    src=\"iframe_figures/figure_21.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_32.html\"\n",
+       "    src=\"iframe_figures/figure_22.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
